--- a/pg/build.gradle
+++ b/pg/build.gradle
@@ -1,14 +1,10 @@
+apply plugin: 'java'
+
 dependencies {
-    compile project(':core')
-    compile project(':prov')
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    implementation 'org.bouncycastle:bcprov-jdk15on:1.64'
 }
 
-jar.baseName = "bcpg-jdk15on"
-
-cobertura {
-   coverageDirs = [
-       "${rootProject.projectDir}/core/build/classes/main",
-       "${rootProject.projectDir}/prov/build/classes/main",
-       "${rootProject.projectDir}/pg/build/classes/main"
-  ]
-}
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
+version = '1.64.0.0'
