use gradle project urls for inclusion als lib

--- a/prov/build.gradle
+++ b/prov/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile project(':extern:bouncycastle:core')
+    compile project(':openkeychain:extern:bouncycastle:core')
 }
 
 sourceCompatibility = 1.6
