--- a/pg/build.gradle
+++ b/pg/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'java'
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile project(':extern:bouncycastle:core')
-    compile project(':extern:bouncycastle:prov')
+    compile project(':openkeychain:extern:bouncycastle:core')
+    compile project(':openkeychain:extern:bouncycastle:prov')
 }
 
 sourceCompatibility = 1.6
